<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/button_to_statis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_see_statis"
            style="FunctionItemSytle"/>

        <Button
            android:id="@+id/button_write_statis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_hour_statis"
            style="FunctionItemSytle"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_below="@id/button_write_statis"
            android:id="@+id/button_add_newFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="FunctionItemSytle"
            android:text="@string/add_new_food"
            android:layout_marginTop="20dp"/>


        <Button
            android:layout_below="@id/button_add_newFood"
            android:id="@+id/button_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="FunctionItemSytle"
            android:text="@string/click_to_add_product"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


    <Button
        android:id="@+id/button_login_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="FunctionItemSytle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/login_out"
        android:layout_marginTop="20dp"/>

</RelativeLayout>